--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@fullcalendar/core": "^4.3.1",
+        "@fullcalendar/daygrid": "^4.3.0",
+        "@fullcalendar/interaction": "^4.3.0",
+        "@fullcalendar/vue": "^4.3.1",
         "sweetalert2": "^9.6.0",
         "vform": "^1.0.1",
         "vue-router": "^3.1.5",
