--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@fullcalendar/core": "^4.3.1",
         "@fullcalendar/daygrid": "^4.3.0",
         "@fullcalendar/interaction": "^4.3.0",
+        "@fullcalendar/timegrid": "^4.3.0",
         "@fullcalendar/vue": "^4.3.1",
         "sweetalert2": "^9.6.0",
         "vform": "^1.0.1",
