--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@fullcalendar/vue": "^4.3.1",
         "sweetalert2": "^9.6.0",
         "vform": "^1.0.1",
+        "vue-bootstrap-datetimepicker": "^5.0.1",
+        "vue-moment": "^4.1.0",
         "vue-router": "^3.1.5",
         "vue-simple-calendar": "^4.3.2"
     }
