--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "7.5.1",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "nexmo/client": "^2.0",
+        "pelago/emogrifier": "2.2.0",
+        "snowfire/beautymail": "dev-master"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
