--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,8 @@ jobs:
 
       # prepare the database
       - run: touch storage/testing.sqlite
-      - run: php artisan migrate 
+#       - run: php artisan migrate 
+#       - run : y
 
       # run tests with phpunit or codecept
       #- run: ./vendor/bin/phpunit
