--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "sweetalert2": "^9.6.0",
         "vform": "^1.0.1",
         "vue-bootstrap-datetimepicker": "^5.0.1",
+        "vue-loading-overlay": "^3.3.0",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.1.5",
         "vue-simple-calendar": "^4.3.2"
