--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "datatables": "^1.10.18",
         "@fullcalendar/core": "^4.3.1",
         "@fullcalendar/daygrid": "^4.3.0",
         "@fullcalendar/interaction": "^4.3.0",
+        "@fullcalendar/list": "^4.4.0",
         "@fullcalendar/timegrid": "^4.3.0",
         "@fullcalendar/vue": "^4.3.1",
+        "datatables": "^1.10.18",
         "fusioncharts": "^3.15.1",
         "sweetalert2": "^9.6.0",
         "vform": "^1.0.1",
