--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "vue-moment": "^4.1.0",
         "vue-monthly-picker": "^0.2.8",
         "vue-router": "^3.1.5",
-        "vue-simple-calendar": "^4.3.2"
+        "vue-select": "^3.6.0",
+        "vue-simple-calendar": "^4.3.2",
+        "vue-simple-search-dropdown": "^1.0.1"
     }
 }
