--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^1.0",
         "nexmo/client": "^2.0",
-        "pelago/emogrifier": "2.0.0 as 1.2.0",
+        "pelago/emogrifier": "2.2.0",
         "snowfire/beautymail": "dev-master"
     },
     "require-dev": {
