--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,7 +18,9 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install
+      run: 
+          composer require pelago/emogrifier
+          composer install
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
