--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,9 +18,8 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: 
-          composer require pelago/emogrifier
-          composer install
+      run: composer install
+           composer require pelago/emogrifier
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
