--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        php: '7.3'
+        php-version: '7.3'
+        tools: composer, phpunit'
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
